Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -447,8 +447,8 @@
         </div>
         
         <div id="lotso-container">
-            <img src="lotso.jpg" onerror="this.src='https://upload.wikimedia.org/wikipedia/en/9/98/Lotso_Toy_Story_3.png'" alt="Lotso Bear" id="lotso-img">
-            <p class="text-white font-bold text-xl mt-4 font-sans" style="text-shadow: 0 2px 4px rgba(0,0,0,0.5);">Warm Hugs for You! 🍓</p>
+            <img src="lotso.png" onerror="this.src='https://upload.wikimedia.org/wikipedia/en/9/98/Lotso_Toy_Story_3.png'" alt="Lotso Bear" id="lotso-img">
+            <p class="text-white font-bold text-xl mt-4 font-sans" style="text-shadow: 0 2px 4px rgba(0,0,0,0.5);">warm hugs for u! 🍓</p>
             <button onclick="closeGift()" class="mt-4 px-4 py-2 bg-white text-red-600 rounded-full font-bold hover:bg-gray-200 transition">Close</button>
         </div>
     </div>
